# toycoin

./: Cargo.toml
src/: block.rs  main.rs  web.rs
src/block/: operations.rs
src/web/: requests.rs
